update and railway up

--- a/.env
+++ b/.env
@@ -1,3 +1,12 @@
 FHIR_CLIENT_ID=782e3471-0703-4e94-aada-5d83aada6c52
 FHIR_TOKEN_URL=https://fhir.epic.com/interconnect-fhir-oauth/oauth2/token
 FHIR_API_URL=https://fhir.epic.com/interconnect-fhir-oauth/api/FHIR/R4
+
+PRIVATE_KEY_PATH=private_key.pem
+JWT_ALGORITHM=RS256
+JWT_EXPIRATION_MINUTES=5
+
+DEBUG=True
+SECRET_KEY=12345
+
+DATABASE_URL=postgresql://neondb_owner:npg_n6q9MyOcXUDi@ep-dawn-heart-a5xge8c0-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require
