--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ PRIVATE_KEY_PATH=private_key.pem
 JWT_ALGORITHM=RS256
 JWT_EXPIRATION_MINUTES=5
 DEBUG=True
-SECRET_KEY=12345
+SECRET_KEY=
 DATABASE_URL=postgresql://neondb_owner:npg_n6q9MyOcXUDi@ep-dawn-heart-a5xge8c0-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require
