--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ JWT_EXPIRATION_MINUTES=5
 DEBUG=True
 SECRET_KEY=
 DATABASE_URL=postgresql://neondb_owner:npg_n6q9MyOcXUDi@ep-dawn-heart-a5xge8c0-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require
+IFAX_ACCESS_TOKEN=3688B885-E2CB4EF1-99A3-A5385CE41A82
