--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,40 @@
-fastapi~=0.115.11
-uvicorn
-sqlalchemy~=2.0.38
-pg8000
-requests~=2.32.3
-PyJWT
-jwt
-python-dotenv
+aiohappyeyeballs==2.5.0
+aiohttp==3.11.13
+aiohttp-retry==2.9.1
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.8.0
+asn1crypto==1.5.1
+attrs==25.1.0
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+cryptography==44.0.2
+dotenv==0.9.9
+fastapi==0.115.11
+frozenlist==1.5.0
+h11==0.14.0
+idna==3.10
+multidict==6.1.0
+ngrok==1.4.0
+pg8000==1.31.2
+propcache==0.3.0
+pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
+PyJWT==2.10.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.20
+requests==2.32.3
+scramp==1.4.5
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.38
+starlette==0.46.0
+twilio==9.4.6
+typing_extensions==4.12.2
+urllib3==2.3.0
+uvicorn==0.34.0
+yarl==1.18.3
