--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ idna==3.10
 multidict==6.1.0
 ngrok==1.4.0
 pg8000==1.31.2
+pillow==11.1.0
 propcache==0.3.0
 pycparser==2.22
 pydantic==2.10.6
@@ -33,6 +34,7 @@ six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.38
 starlette==0.46.0
+tesseract==0.1.3
 twilio==9.4.6
 typing_extensions==4.12.2
 urllib3==2.3.0
